--- a/public/test.html
+++ b/public/test.html
@@ -7,6 +7,13 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Test html</title>
   </head>
+  <style>
+    html, body {
+      margin: 0;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
   <body>
     <noscript>
       <strong>We're sorry but vue-cli3-multi-demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
